# diritto-quiz-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
assets/: index-C5pmWvM9.js  index-Cel76RY-.css  webdb-Bletp7ol.js
docs/: domande_pool2_prof_2026-06-11.md
docs/superpowers/specs/: 2026-06-11-quiz-multimateria-design.md
migrations/: 001_initial.sql
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Layout.tsx
src/features/: Dashboard.tsx  ErrorReview.tsx  ExamSim.tsx  Generate.tsx  QuizRunner.tsx  Settings.tsx  Stats.tsx  TopicReview.tsx
src/lib/: db.ts  llm.ts  logic.test.ts  questions.ts  quiz.ts  seed.ts  srs.ts  stats.ts  webdb.ts
src/seed/: seed_diritto.json
src/store/: app.ts
